syntax = "proto3";

package api.note_v1;

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "validate/validate.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option go_package = "github.com/anton7191/note-server-api/pkg/note_v1";

service NoteV1 {
    rpc CreateNote (CreateNoteRequest) returns (CreateNoteResponse){
        option (google.api.http) = {
            post: "/note/v1/create"
            body: "*"
        };
    }
    rpc GetNote (GetNoteRequest) returns (GetNoteResponse){
        option (google.api.http) = {
            post: "/note/v1/get"
            body: "*"
        };
    }
    rpc GetListNote (google.protobuf.Empty) returns (GetListNoteResponse){
        option (google.api.http) = {
            post: "/note/v1/get-list"
            body: "*"
        };
    }
    rpc UpdateNote (UpdateNoteRequest) returns (google.protobuf.Empty){
        option (google.api.http) = {
            post: "/note/v1/update"
            body: "*"
        };
    }
    rpc DeleteNote (DeleteNoteRequest) returns (google.protobuf.Empty){
        option (google.api.http) = {
            post: "/note/v1/delete"
            body: "*"
        };
    }
}

message NoteInfo {
    string title = 1;
    string text = 2;
    string author = 3;
}

message UpdateNoteInfo {
    google.protobuf.StringValue title = 1;
    google.protobuf.StringValue text = 2;
    google.protobuf.StringValue author = 3;
}

message Note {
    int64 id = 1;
    NoteInfo note = 2;
    google.protobuf.Timestamp created_at = 3;
    google.protobuf.Timestamp updated_at = 4;
}

message CreateNoteRequest{
    //int64 id = 1;
    NoteInfo note = 1;
}

message CreateNoteResponse{
    int64 id = 1;
}

message GetNoteRequest{
    int64 id = 1 [(validate.rules).int64.gt = 0];
}

message GetNoteResponse{
    Note note = 1;
}

message UpdateNoteRequest{
    int64 id = 1;
    UpdateNoteInfo note = 2;
}

message DeleteNoteRequest{
    int64 id = 1 [(validate.rules).int64.gt = 0];
}

message GetListNoteResponse{
    repeated Note note = 1;
}